♻️ Support tree_stump with Rust backend
- Improved Java support for native JAR grammars